<resources>
    <string name="app_name">ShareChat-Android-Test</string>

    <string name="title_home">Trending Feed</string>

    <string name="network_error">Please check your network connection and try again after some time</string>

    <string name="error_download_permission_denied">Looks like you\'ve denied permission to access storage</string>
    <string name="error_download_permission_never_ask">Looks like you\'ve set permission to access storage to Never Ask. Please go to App Info and turn on storage permissions.</string>

    <string name="age">Age</string>
    <string name="dob">Dob</string>
    <string name="gender">Gender</string>
    <string name="status">Status</string>
    <string name="Contact">Contact</string>
</resources>
